# Uptime-Monitor-CLI

./: Cargo.toml  README.md
src/: http.rs  main.rs  system_stats.rs
