[package]
name = "uptime-monitor-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.33.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
